--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@primeuix/themes": "^1.1.1",
+    "@primevue/forms": "^4.3.4",
     "@tailwindcss/vite": "^4.1.7",
     "pinia": "^3.0.1",
     "primeicons": "^7.0.0",
@@ -22,7 +23,8 @@
     "tailwindcss": "^4.1.7",
     "tailwindcss-primeui": "^0.6.1",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.0"
+    "vue-router": "^4.5.0",
+    "zod": "^3.25.30"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^4.13.2",
