feat(layout): add layout ui

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@primeuix/themes": "^1.1.1",
     "@primevue/forms": "^4.3.4",
     "@tailwindcss/vite": "^4.1.7",
+    "@vueuse/core": "^13.2.0",
     "pinia": "^3.0.1",
     "primeicons": "^7.0.0",
     "primevue": "^4.3.4",
