--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@primevue/forms": "^4.3.4",
     "@tailwindcss/vite": "^4.1.7",
     "@vueuse/core": "^13.2.0",
+    "ag-grid-vue3": "^33.3.1",
     "pinia": "^3.0.1",
     "primeicons": "^7.0.0",
     "primevue": "^4.3.4",
