--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@tailwindcss/vite": "^4.1.7",
     "@vueuse/core": "^13.2.0",
     "ag-grid-vue3": "^33.3.1",
+    "axios": "^1.9.0",
     "pinia": "^3.0.1",
     "primeicons": "^7.0.0",
     "primevue": "^4.3.4",
