--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "tailwindcss-primeui": "^0.6.1",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0",
+    "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.3/xlsx-0.20.3.tgz",
     "zod": "^3.25.30"
   },
   "devDependencies": {
